// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SearchResult component When component is initially rendered should render component 1`] = `
<Fragment>
  <Loading />
</Fragment>
`;

exports[`Test SearchResult component When error occurs should render component 1`] = `
<Fragment>
  <ErrorMessage
    error={
      Object {
        "response": Object {
          "data": Object {
            "error": Object {
              "code": 400,
              "errors": Array [
                Object {
                  "domain": "youtube.part",
                  "location": "part",
                  "locationType": "parameter",
                  "message": "'snippe'",
                  "reason": "unknownPart",
                },
              ],
              "message": "'snippe'",
            },
          },
        },
      }
    }
  />
</Fragment>
`;

exports[`Test SearchResult component When no result is fetched should render component 1`] = `
<Fragment>
  <ErrorMessage
    error={
      Object {
        "displayMessage": "No video found with the key word: google dev",
      }
    }
  />
</Fragment>
`;

exports[`Test SearchResult component When search result is fetched should render component 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-center"
  >
    <div
      className="col-lg-9"
    >
      <h3
        className="mb-3"
      >
        Search results with keyword:
         
        <span
          className="text-danger"
        >
          google dev
        </span>
      </h3>
      <SearchResultList
        searchResultList={
          Array [
            Object {
              "etag": "XYpvNChnzsvfjhXgkodwf1QKZsA",
              "id": Object {
                "channelId": "UC_x5XG1OV2P6uZZ5FSM9Ttw",
                "kind": "youtube#channel",
              },
              "kind": "youtube#searchResult",
              "snippet": Object {
                "channelId": "UC_x5XG1OV2P6uZZ5FSM9Ttw",
                "channelTitle": "Google Developers",
                "description": "The Google Developers channel features talks from events, educational series, best practices, tips, and the latest updates across our products and platforms.",
                "liveBroadcastContent": "none",
                "publishTime": "2007-08-23T00:34:43Z",
                "publishedAt": "2007-08-23T00:34:43Z",
                "thumbnails": Object {
                  "default": Object {
                    "url": "https://yt3.ggpht.com/-Fgp8KFpgQqE/AAAAAAAAAAI/AAAAAAAAAAA/Wyh1vV5Up0I/s88-c-k-no-mo-rj-c0xffffff/photo.jpg",
                  },
                  "high": Object {
                    "url": "https://yt3.ggpht.com/-Fgp8KFpgQqE/AAAAAAAAAAI/AAAAAAAAAAA/Wyh1vV5Up0I/s800-c-k-no-mo-rj-c0xffffff/photo.jpg",
                  },
                  "medium": Object {
                    "url": "https://yt3.ggpht.com/-Fgp8KFpgQqE/AAAAAAAAAAI/AAAAAAAAAAA/Wyh1vV5Up0I/s240-c-k-no-mo-rj-c0xffffff/photo.jpg",
                  },
                },
                "title": "Google Developers",
              },
            },
            Object {
              "etag": "LVcDd4wjf6nftSQTOeuSrsWPisQ",
              "id": Object {
                "channelId": "UCnUYZLuoy1rq1aVMwx4aTzw",
                "kind": "youtube#channel",
              },
              "kind": "youtube#searchResult",
              "snippet": Object {
                "channelId": "UCnUYZLuoy1rq1aVMwx4aTzw",
                "channelTitle": "Google Chrome Developers",
                "description": "Making the web more awesome.",
                "liveBroadcastContent": "none",
                "publishTime": "2012-04-24T00:05:52Z",
                "publishedAt": "2012-04-24T00:05:52Z",
                "thumbnails": Object {
                  "default": Object {
                    "url": "https://yt3.ggpht.com/-9X-_QJu0RvQ/AAAAAAAAAAI/AAAAAAAAAAA/X3cPcZ5icto/s88-c-k-no-mo-rj-c0xffffff/photo.jpg",
                  },
                  "high": Object {
                    "url": "https://yt3.ggpht.com/-9X-_QJu0RvQ/AAAAAAAAAAI/AAAAAAAAAAA/X3cPcZ5icto/s800-c-k-no-mo-rj-c0xffffff/photo.jpg",
                  },
                  "medium": Object {
                    "url": "https://yt3.ggpht.com/-9X-_QJu0RvQ/AAAAAAAAAAI/AAAAAAAAAAA/X3cPcZ5icto/s240-c-k-no-mo-rj-c0xffffff/photo.jpg",
                  },
                },
                "title": "Google Chrome Developers",
              },
            },
            Object {
              "etag": "gnr-mSrcXXuX3s59GvE0ArOWaUg",
              "id": Object {
                "kind": "youtube#playlist",
                "playlistId": "IDZyZMYn3H0",
              },
              "kind": "youtube#searchResult",
              "snippet": Object {
                "channelId": "UCsBjURrPoezykLs9EqgamOA",
                "channelTitle": "Fireship",
                "description": "What does it take to become a Google Developer Expert? Learn about my own experience becoming a GDE with practical advice for working towards this goal.",
                "liveBroadcastContent": "none",
                "publishTime": "2019-05-23T21:06:17Z",
                "publishedAt": "2019-05-23T21:06:17Z",
                "thumbnails": Object {
                  "default": Object {
                    "height": 90,
                    "url": "https://i.ytimg.com/vi/IDZyZMYn3H0/default.jpg",
                    "width": 120,
                  },
                  "high": Object {
                    "height": 360,
                    "url": "https://i.ytimg.com/vi/IDZyZMYn3H0/hqdefault.jpg",
                    "width": 480,
                  },
                  "medium": Object {
                    "height": 180,
                    "url": "https://i.ytimg.com/vi/IDZyZMYn3H0/mqdefault.jpg",
                    "width": 320,
                  },
                },
                "title": "How to Become a Google Developer Expert (GDE)",
              },
            },
            Object {
              "etag": "fUy83ga9B0qPSeFNWMj7RhWuLUY",
              "id": Object {
                "kind": "youtube#video",
                "videoId": "H89hKw06iWs",
              },
              "kind": "youtube#searchResult",
              "snippet": Object {
                "channelId": "UCnUYZLuoy1rq1aVMwx4aTzw",
                "channelTitle": "Google Chrome Developers",
                "description": "Join us for day 1 of web.dev LIVE as we head to the Americas timezone to provide helpful content on Performance and Discovery through Search. Enjoy the ...",
                "liveBroadcastContent": "none",
                "publishTime": "2020-06-30T16:00:10Z",
                "publishedAt": "2020-06-30T16:00:10Z",
                "thumbnails": Object {
                  "default": Object {
                    "height": 90,
                    "url": "https://i.ytimg.com/vi/H89hKw06iWs/default.jpg",
                    "width": 120,
                  },
                  "high": Object {
                    "height": 360,
                    "url": "https://i.ytimg.com/vi/H89hKw06iWs/hqdefault.jpg",
                    "width": 480,
                  },
                  "medium": Object {
                    "height": 180,
                    "url": "https://i.ytimg.com/vi/H89hKw06iWs/mqdefault.jpg",
                    "width": 320,
                  },
                },
                "title": "web.dev LIVE 2020: Day One",
              },
            },
            Object {
              "etag": "jK7Ncy4_CI-PKWWCXXrJSD-cQBs",
              "id": Object {
                "kind": "youtube#video",
                "videoId": "oHBFD8cfXho",
              },
              "kind": "youtube#searchResult",
              "snippet": Object {
                "channelId": "UCaO6VoaYJv4kS-TQO_M-N_g",
                "channelTitle": "Clément Mihailescu",
                "description": "This is what a real day in the life of a Google Software Engineer looks like. What I worked on at Google: https://youtu.be/Az_PtvMt5_Y Song at the beginning of ...",
                "liveBroadcastContent": "none",
                "publishTime": "2019-09-24T14:00:09Z",
                "publishedAt": "2019-09-24T14:00:09Z",
                "thumbnails": Object {
                  "default": Object {
                    "height": 90,
                    "url": "https://i.ytimg.com/vi/oHBFD8cfXho/default.jpg",
                    "width": 120,
                  },
                  "high": Object {
                    "height": 360,
                    "url": "https://i.ytimg.com/vi/oHBFD8cfXho/hqdefault.jpg",
                    "width": 480,
                  },
                  "medium": Object {
                    "height": 180,
                    "url": "https://i.ytimg.com/vi/oHBFD8cfXho/mqdefault.jpg",
                    "width": 320,
                  },
                },
                "title": "A REAL Day in the Life of a Google Software Engineer",
              },
            },
          ]
        }
      />
      <div
        style={
          Object {
            "margin": "0 auto",
            "width": "50%",
          }
        }
      >
        <MoreButton
          onClickMore={[Function]}
        />
      </div>
    </div>
  </div>
</Fragment>
`;
